objects/MedProSC__MedProCustomer_Field__c.object
<CustomObject>
    <description>A custom object which stores information about the MedProID fields which are made available to a given MedPro Customer. Fields are either typed as &quot;Pass One&quot; or &quot;Pass Two&quot;</description>
    <fields>
        <fullName>MedProSC__Allow_Action_on_DRP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Action on DRP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedPro_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated MedPro Customer for this customer field</inlineHelpText>
        <label>MedPro Customer</label>
        <referenceTo>MedProSC__MedProCustomer__c</referenceTo>
        <relationshipLabel>MedPro Customer Fields</relationshipLabel>
        <relationshipName>MedPro_Customer_Pass_2_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProSC__Priority_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specifies if this customer field receive priority status at the top of a field-selection drop down list box</inlineHelpText>
        <label>Priority Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Priority_Ordinal_Position__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Numeric value allows the customer field to be assigned a priority relative to other high priority customer fields</inlineHelpText>
        <label>Priority Ordinal Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProSC__Type__c</fullName>
        <inlineHelpText>The type of MedPro customer field; Allowable values are &quot;Pass One&quot; or &quot;Pass Two&quot;</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass One</fullName>
                </value>
                <value>
                    <fullName>Pass Two</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MedPro Customer Field</label>
    <nameField>
        <label>MedPro Customer Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedPro Customer Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>